<resources>

    <string name="hello_blank_fragment">Temporal Blank Fragment</string>

    <!-- GLOBAL STRINGS -->
    <string name="app_name">Yumekai</string>
    <string name="app_name_first_part">Yume</string>
    <string name="app_name_second_part">Kai</string>

    <!--***** MENU STRINGS *****-->
    <string name="menu_calendar">Calendar</string>
    <string name="menu_recents">Recents</string>
    <string name="menu_news">News</string>
    <!-- MENU MORE BUTTONS -->
    <string name="bottom_menu_sheet_btn_shops">View shops</string>
    <string name="bottom_menu_sheet_btn_manga">Read manga</string>
    <string name="bottom_menu_sheet_btn_community">Community</string>

    <!--***** SPLASH-SCREEN STRINGS *****-->
    <string name="splash_screen_slogan">The Japanese culture in your hands!</string>
    <string name="splash_screen_powered_by">powered by</string>

    <!--***** ON-BOARDING SCREEN *****-->
    <!-- Titles -->
    <string name="first_slide_title">Enjoy all the anime...</string>
    <string name="second_slide_title">The best anime news ...</string>
    <string name="third_slide_title">And you, do you like to read manga?</string>
    <string name="fourth_slide_title">Lorem magno ipso factus</string>

    <!-- Descriptions -->
    <string name="first_slide_desc">Check the calendar, premieres and manage your memory drawer.</string>
    <string name="second_slide_desc">Do you like to be informed of all the news? We have a news section designed for you.  Do not miss it !</string>
    <string name="third_slide_desc">You are lucky. We have also thought of you. Join to enjoy all the mangaka art in our app.</string>
    <string name="fourth_slide_desc">Lorem impusm. isurti ulipo! Lorem impusm. isurti ulipo.</string>

    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let get started</string>
    <string name="Sunday">sunday</string>
    <string name="Monday">monday</string>
    <string name="Tuesday">tuesday</string>
    <string name="Wednesday">wednesday</string>
    <string name="Thursday">thursday</string>
    <string name="Feiday">friday</string>
    <string name="Saturday">saturday</string>

    <!--***** NEWS SCREEN *****-->
    <!-- Titles -->
    <string name="news_screen_title">News</string>

    <!-- Buttons -->
    <string name="news_screen_continue_readig">Continue readig</string>

    <!--***** OUR-TEAM SCREEN *****-->
    <!-- Descriptions -->
    <string name="our_team_screen_desc">Application developed as a final project by application development students for lovers of Japanese culture and anime.</string>

    <!-- Buttons -->
    <string name="our_team_visit_web">Visit to our website</string>

    <!--***** HISTORY SCREEN *****-->
    <!-- Titles -->
    <string name="history_screen_title">Historical</string>
    <!-- (( NO CONTENT ITEM )) -->
    <!-- Titles -->
    <string name="history_screen_no_content_title">No content...</string>

    <!-- Descriptions -->
    <string name="history_screen_no_content_desc">It seems that you have not used the application enough.</string>

    <!--***** RECENT SCREEN *****-->
    <!-- Titles -->
    <string name="recent_screen_title">Recent</string>

    <!--***** SEARCH SCREEN *****-->
    <!-- Titles -->
    <string name="search_screen_title">Search</string>

    <!-- Descriptions -->
    <string name="search_screen_description">Search your favourite anime!</string>
    <!-- (( NO CONTENT ITEM )) -->
    <string name="search_screen_no_content_title">You have not searched yet!</string>
    <string name="search_screen_no_content_desc">Find your favorite anime, manga with the tags @anime: and @manga:</string>



    <!-- ANIME CALENDAR -->
    <string name="calender_btn_Previus">Previus</string>
    <string name="calendar_btnNext">Next</string>

    <!-- NO INTERNET -->
    <string name="item_no_internet_retry">RETRY</string>

    <!-- SHOP DETAIL-->
    <string name="product_details_screen_btn_cart">Add to Cart</string>
    <string name="product_details_screen_btn_buy">¡Buy Now!</string>
    <string name="description">Description</string>

    <!-- Recents -->
    <string name="recent_screen_btn_more_popular">View more</string>
    <string name="more_populars">More populars</string>
    <string name="descriptionRecents">The news that more like</string>
    <string name="recent_screen_btn_random">Random</string>
    <string name="recent_screen_btn_for_me">For me</string>
    <string name="recent_screen_btn_directory">Directory</string>

    <!-- SERIES SCREEN -->
    <string name="available_series">Available series</string>
    <string name="volumes">Volumes</string>

    <!-- SHOP CATEGORIES -->
    <string name="shop_categories">SHOP CATEGORIES</string>

    <!-- item_anime_details_gallery -->
    <string name="item_anime_details_gallery_text">Gallery</string>

    <!-- item_anime_details_general -->
    <string name="item_anime_details_general_synopsis">Synopsis</string>
    <string name="item_anime_details_general_categories">Categories</string>
    <string name="item_anime_details_general_alternative_titles">Alternative Titles</string>
    <string name="item_anime_details_general_english">English:</string>
    <string name="item_anime_details_general_japanese">Japanese:</string>
    <string name="item_anime_details_general_information">Information</string>
    <string name="item_anime_details_general_airing">Airing:</string>
    <string name="item_anime_details_general_released">Released:</string>
    <string name="item_anime_details_general_producers">Producers:</string>
    <string name="item_anime_details_general_licenses">Licenses:</string>
    <string name="item_anime_details_general_studios">Studios:</string>
    <string name="item_anime_details_general_source">Source:</string>
    <string name="item_anime_details_general_clasification">Clasification:</string>
    <string name="item_anime_details_general_puntuation">Puntuation:</string>
    <string name="item_anime_details_general_popuarity">Popuarity:</string>
    <string name="item_anime_details_general_membres">Membres:</string>
    <string name="item_anime_details_general_favourites">Favourites:</string>
    <string name="item_anime_details_general_relations">Relations</string>
    <string name="item_anime_details_general_characters">Characters</string>
    <string name="item_anime_details_general_staff">Staff</string>
    <!-- item_anime_details_media -->
    <string name="item_anime_details_media_video">Video</string>
    <string name="item_anime_details_media_chapters">Chapters</string>
    <!-- item_historial -->
    <string name="history_screen_btn_finalized">Add to finalized</string>
    <string name="history_screen_btn_recommended">Add to recommended</string>
    <string name="history_screen_btn_following">Add to following</string>
    <string name="history_screen_btn_favourites">Add to favourites</string>
    <!-- item_shop_volume -->
    <string name="txtBuy">BUY</string>
    <string name="item_shop_volume_btn_buy">¡Buy Now!</string>
    <!-- on_boarding_slide -->
    <string name="titleSlide">Disfruta de todo el anime...</string>
    <string name="descriptionSlide">Comprueba el calendario, estrenos y gestiona tu cajón de recuerdos.</string>

    <!-- item_anime_details_comments-->
    <string name="item_anime_details_comments_title">Comments</string>
    <string name="item_anime_details_comments_write_a_comment">Write a public comment...</string>
    <!-- item_comment -->
    <string name="item_comment_supporter">Supporter</string>

</resources>