<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="@color/soft_white">

    <item
        android:id="@+id/menu_item_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_today_36"
        android:title="@string/menu_calendar"
        app:cnb_backgroundColor="@color/alt_black"
        app:cnb_iconColor="@color/soft_white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/soft_white" />

    <item
        android:id="@+id/menu_item_recents"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_fire_department_36"
        android:title="@string/menu_recents"
        app:cnb_backgroundColor="@color/alt_black"
        app:cnb_iconColor="@color/soft_white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/soft_white" />

    <item
        android:id="@+id/menu_item_news"
        android:enabled="true"
        android:icon="@drawable/ic_outline_article_36"
        android:title="@string/menu_news"
        app:cnb_backgroundColor="@color/alt_black"
        app:cnb_iconColor="@color/soft_white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/soft_white" />

    <item
        android:id="@+id/menu_item_drop_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_keyboard_arrow_up_36"
        android:title=""
        app:cnb_unselectedColor="@color/alt_black"
        app:cnb_backgroundColor="@color/red_primary"
        app:cnb_iconColor="@color/soft_white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/soft_white"/>

</menu>