<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Splash.SplashActivity"
    android:background="@color/dark_black">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">
        <TextView
            android:text="@string/app_name_first_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="42sp"
            android:textColor="@color/red_primary"
            android:textAllCaps="true"
            />
        <TextView
            android:text="@string/app_name_second_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:fontFamily="@font/nunito_black"
            android:textSize="42sp"
            android:textColor="@color/red_primary"
            android:textAllCaps="true"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintVertical_bias="0"
        android:text="@string/splash_screen_slogan"
        android:padding="0dp"
        android:fontFamily="@font/nunito_bold"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_screen_powered_by"
            android:textAllCaps="false"
            android:textColor="@color/red_primary"
            android:fontFamily="@font/nunito_bold"
            />
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/logo_codefastly"
            android:contentDescription="logo_codefastly"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>