<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NoInternet.NoInternetFragment"
        android:background="@color/dark_black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_no_internet_image"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/yumekai_no_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/item_no_internet_title"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="@string/history_screen_no_content_title"
                android:textAlignment="center"
                android:fontFamily="@font/nunito_black"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/item_no_internet_desc"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="@string/history_screen_no_content_desc"
                android:textAlignment="center"
                android:fontFamily="@font/nunito"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/item_no_internet_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/nunito"
                android:background="@color/red_primary_op"
                android:layout_gravity="center"
                android:text="@string/item_no_internet_retry" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>