<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.OurTeam.OurTeamFragment"
        android:background="@color/dark_black">

        <Button
            android:id="@+id/our_team_screen_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_baseline_keyboard_arrow_left_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">
            <TextView
                android:text="@string/app_name_first_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:fontFamily="@font/nunito_bold"
                android:textSize="42sp"
                android:textColor="@color/red_primary"
                android:textAllCaps="true"
                />
            <TextView
                android:text="@string/app_name_second_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:fontFamily="@font/nunito_black"
                android:textSize="42sp"
                android:textColor="@color/red_primary"
                android:textAllCaps="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <!-- SLOGAN -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen_slogan"
                android:fontFamily="@font/nunito"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <!-- DESCRIPTION -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/alt_black"
                app:cardCornerRadius="4dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_team_screen_desc"
                    android:fontFamily="@font/nunito"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />

            </androidx.cardview.widget.CardView>

            <!-- SOCIAL NEWTWORKS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- TODO() -->

            </LinearLayout>

            <!-- VISIT OUR WEB -->
            <Button
                android:id="@+id/our_team_screen_btn_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/our_team_visit_web"
                android:textColor="@color/red_primary"
                android:fontFamily="@font/nunito_bold"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:backgroundTint="@color/red_primary_op"/>

        </LinearLayout>


        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/yumekai_mascot_liebe"
            android:scaleType="centerCrop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:layout_marginTop="-50dp"
                android:contentDescription="Our Team Shape"
                android:rotation="180"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_rare_shape" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="-80dp"
                android:contentDescription="Our Team Shape"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rare_shape" />
                -->

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>